<resources>
    <string name="app_name">Butler</string>

    <!-- release -->
    <string name="dummy_content">0.9 beta8</string>  <!-- this one is displayed in the back of the main activity. Must be empty for a stable release -->
    <string name="release">0.9 beta8</string>  <!-- this one is displayed in the about menu -->

    <!-- layout main -->
    <string name="request_default">Click on the bottom button...</string>
    <!-- <string name="request_default_with_wakeup">Click on the bottom button or speak this to wake me up: </string>-->
    <string name="response_default"></string>
    <string name="title_activity_settings">Settings</string>

    <!-- layout help -->
    <string name="help_text_1">The Butler Android application helps you to speak with your Domogik server in your home.</string>

    <!-- menu -->
    <string name="menu_main">Settings</string>
    <string name="menu_mute">Mute/unmute</string>
    <string name="menu_keyspotting">Allow keyspotting</string>

    <!-- notifications -->
    <string name="action_exit">Stop service</string>
    <string name="service_connected">Butler service started</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_domogik">Domogik</string>

    <string name="pref_domogik_admin_url">Administration url</string>
    <string name="pref_default_domogik_admin_url">https://192.168.1.50:40404/</string>
    <string name="pref_summary_domogik_admin_url">Set the Domogik administration url</string>

    <string name="pref_domogik_admin_user">User</string>
    <string name="pref_default_domogik_admin_user">admin</string>
    <string name="pref_summary_domogik_admin_user">Set a Domogik user login</string>

    <string name="pref_domogik_admin_password">Password</string>
    <string name="pref_default_domogik_admin_password">123</string>
    <string name="pref_summary_domogik_admin_password">Set the choosen user password</string>


    <string name="pref_header_keyspotting">Wake up with a keyphrase</string>

    <string name="pref_keyspotting_activated">Activate the keyphrase wake up</string>
    <string name="pref_summary_keyspotting_activated">If checked, you will be able to wake up the voice recognition by speaking the keyphrase.</string>

    <string name="pref_keyspotting_lang">Language</string>
    <string name="pref_summary_keyspotting_lang">Choose the input language.</string>

    <string name="pref_keyspotting_keyphrase">Keyphrase</string>
    <string name="pref_default_keyspotting_keyphrase"></string>
    <string name="pref_summary_keyspotting_keyphrase">This is the keyphrase you will speak to wake up the voice recognition.</string>

    <string name="pref_keyspotting_threshold">Threshold</string>
    <string name="pref_summary_keyspotting_threshold">If the keyphrase is hard to recognize, you can lower this value.</string>
    <string name="butler_crash">Butler Crashed</string>


    <string name="pref_header_service">Service</string>

    <string name="pref_service_stop">Stop the butler service</string>
    <string name="pref_summary_service_stop">Check to stop the Butler service and application.</string>


    <string name="pref_header_location">Location</string>

    <string name="pref_location_activated">Activate the location tracking</string>
    <string name="pref_summary_location_activated">If checked, your position will be sent to your Domogik to allow you to use it in advanced scenarii.</string>

    <string name="pref_location_interval">Interval</string>
    <string name="pref_summary_location_interval">Choose the interval between two send of the location.</string>

    <string name="pref_location_errors_hidden">Hide the location errors</string>
    <string name="pref_summary_location_errors_hidden">If your phone is out of network, hiding the errors will avoid you to see error messages on the screen.</string>

    <string name="pref_location_wifi_1_name">Location n°1 - name</string>
    <string name="pref_summary_location_wifi_1_name">Name of a location configured on Domogik side</string>

    <string name="pref_location_wifi_1_ssid">Location n°1 - wifi name (SSID)</string>
    <string name="pref_summary_location_wifi_1_ssid">The Wifi SSID of the location</string>


    <string name="pref_header_advanced">Advanced settings</string>

    <string name="pref_advanced_listen_on_display_activated">Start listening you on application startup</string>
    <string name="pref_summary_advanced_listen_on_display_activated">If checked, when you open the application, it will start to listen you query to the Butler.</string>

    <string name="pref_advanced_hide_notification">Hide the notification icon</string>
    <string name="pref_summary_advanced_hide_notification">If checked, hide the notification icon.</string>




    <string name="pref_header_about">Help / About</string>

    <string name="pref_about_help">Help</string>
    <string name="pref_summary_about_help">Open the help page.</string>

    <string name="pref_about_release">Butler Android release</string>
    <!-- no summary, sumary is the release -->

</resources>
