<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- android:icon="@drawable/ic_info_black_24dp" -->
    <header
        android:fragment="org.domogik.butler.SettingsActivity$DomogikPreferenceFragment"

        android:title="@string/pref_header_domogik" />

    <header
        android:fragment="org.domogik.butler.SettingsActivity$KeyspottingPreferenceFragment"

        android:title="@string/pref_header_keyspotting" />

    <!-- TODO : activate in Domogik 0.6
    <header
        android:fragment="org.domogik.butler.SettingsActivity$LocationPreferenceFragment"

        android:title="@string/pref_header_location" />
    -->

    <header
        android:fragment="org.domogik.butler.SettingsActivity$ServicePreferenceFragment"

        android:title="@string/pref_header_service" />

    <header
        android:fragment="org.domogik.butler.SettingsActivity$AdvancedPreferenceFragment"

        android:title="@string/pref_header_advanced" />

    <header
        android:fragment="org.domogik.butler.SettingsActivity$AboutPreferenceFragment"

        android:title="@string/pref_header_about" />

</preference-headers>
